<resources>
    <string name="app_name">Voice Recognition RPG Demo</string>
    <string name="settings_name">Settings</string>
    <string name="call_activity_name">Video Conferencing Demo</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="action_settings">Settings</string>
    <string name="action_goto_call">Calling Demo</string>
    <string name="action_goto_room_utensil">Utensil Demo</string>
    <string name="action_goto_room_more_utensils">More Utensils</string>
    <string name="action_goto_room_tutorial">Tutorial</string>
    <string name="action_goto_battle">Battle</string>
    <string name="action_goto_puzzle">Puzzle Room</string>
    <string name="listening">Listening…</string>
    <string name="processing">Processing…</string>
    <string name="permissions_enable">Please enable permissions</string>
    <string name="semantic_similarity_method">Semantic Similarity Method</string>
    <string name="method_wuplin">Comb (WUP + LIN)</string>
    <string name="method_wupleacock">Comb (WUP + LEACOCK)</string>
    <string name="method_wup">WUP</string>
    <string name="method_lin">LIN</string>
    <string name="method_lesk">LESK</string>
    <string name="switch_battle">Use Simpler Battle Table</string>
    <string name="switch_mult_suggest">Suggest Multiple Commands</string>
    <string name="label_synonym_map">User Synonyms</string>
    <string name="delete">Delete</string>
</resources>
