<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_goto_call"
        android:title="@string/action_goto_call"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_room_utensil"
        android:title="@string/action_goto_room_utensil"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_room_more_utensils"
        android:title="@string/action_goto_room_more_utensils"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_room_tutorial"
        android:title="@string/action_goto_room_tutorial"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_battle"
        android:title="@string/action_goto_battle"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_goto_puzzle"
        android:title="@string/action_goto_puzzle"
        android:visible="true"
        app:showAsAction="never" />
</menu>